--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 						</section>
 
 						<nav class="top_menu text_not_center">
-								<a href="http://shenkar.html5-book.co.il/2017-2018/web1/dev_67/exercises/ex1/index.html" target="_blank">EX1</a> &nbsp;|&nbsp;&nbsp;
+								<a href="ex1/index.html" target="_blank">EX1</a> &nbsp;|&nbsp;&nbsp;
 								<a href="#" target="_blank">EX3 FORM</a> &nbsp;&nbsp;|&nbsp;&nbsp;
 								<a href="#" target="_blank">FINAL PROJECT</a> &nbsp;&nbsp;|
 								<a href="#" target="_blank">My GitHub</a> 
