--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 								<a href="ex1/index.html" target="_blank">EX1</a> &nbsp;|&nbsp;&nbsp;
 								<a href="#" target="_blank">EX3 FORM</a> &nbsp;&nbsp;|&nbsp;&nbsp;
 								<a href="#" target="_blank">FINAL PROJECT</a> &nbsp;&nbsp;|
-								<a href="#" target="_blank">My GitHub</a> 
+								<a href="https://github.com/dogliy/s_2.git" target="_blank">My GitHub</a> 
 						</nav>
 				</div>
 		</header>
@@ -25,7 +25,7 @@
 				<section class="back_pic">
 					<h1 class="inline_block">Nir Adler</h1>
 					<p><br>i student for softwere software engineering</p><br><br> <br>
-					<a href="#" target="_blank">Go to My Github</a>
+					<a href="https://github.com/dogliy/s_2.git" target="_blank">Go to My Github</a>
 				 </section>
 				 <section class="my_info">
 				 		<h2>ניר אדלר</h2> 
