--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 				<div class="header_box back_color">
 
 						<section class="text_not_center logo_box">
-								<a href="index.html" class="logo"><div class="logo_text">Nir Adler</div></a>
+								<a href="index.html" class="logo"><section class="logo_text">Nir Adler</section></a>
 						</section>
 
 						<nav class="top_menu text_not_center">
@@ -24,7 +24,7 @@
 			<main class="add_block text_center">
 				<section class="back_pic">
 					<h1 class="inline_block">Nir Adler</h1>
-					<p><br>i student for softwere software engineering</p><br><br> <br>
+					<p><br>i student for software engineering</p><br><br> <br>
 					<a href="https://github.com/dogliy/s_2.git" target="_blank">Go to My Github</a>
 				 </section>
 				 <section class="my_info">
